--- a/www/templates/pagamento.html
+++ b/www/templates/pagamento.html
@@ -2,20 +2,20 @@
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <h4 id="pagamento-heading1" style="color:#000000;">Método de Pagamento</h4>
     <div class="list card" id="pagamento-card21">
-      <ion-item class="item-avatar" id="pagamento-list-item10">
+      <ion-item class="item-avatar" id="pagamento-list-item10" onclick="changebackground();">
         <img src="img/lF3Zj4txRAy3iMwxT5DT_americanexpress-credit-debit-card-bank-transaction-32287.webp">
         <h2>Joaquina Nogueira</h2>
-        <p>xxxx xxxx xxxx xxxx 6133</p>
+        <p>6133 **** **** ****</p>
       </ion-item>
-      <ion-item class="item-avatar" id="pagamento-list-item17">
+      <ion-item class="item-avatar" id="pagamento-list-item17" onclick="changebackground2();">
         <img src="img/asHFywhTym0Xzz1qAEAC_transferir1.png">
         <h2>Joaquina Nogueira</h2>
-        <p>9011 xxxx xxxx xxxx xx</p>
+        <p>9011 **** **** ****</p>
       </ion-item>
-      <ion-item class="item-avatar" id="pagamento-list-item18">
+      <ion-item class="item-avatar" id="pagamento-list-item18" onclick="changebackground3();">
         <img src="img/I8lbAChRTOiz0pW7Etg7_mastercard-credit-debit-card-bank-transaction-32303.webp">
         <h2>José Cid Nogueira</h2>
-        <p>4231 xxxx xxxx xxxx xx</p>
+        <p>4231 **** **** ****</p>
       </ion-item>
     </div>
     <div id="pagamento-button-bar1" class="button-bar"></div>
@@ -45,4 +45,36 @@
         alert('Flight successfuly purchased! Enjoy the trip!');
         window.location='index.html#/page1';
       }
+
+      function changebackground(){
+        var x = document.getElementById("pagamento-list-item10");
+        if (x.style.backgroundColor === "lightgray") {
+          x.style.backgroundColor = "white";
+        } else {
+          x.style.backgroundColor = "lightgray";
+        }
+	      //document.getElementById("pagamento-list-item10").style.backgroundColor = 'lightgray' ; 
+      }
+
+      function changebackground2(){
+        var x = document.getElementById("pagamento-list-item17");
+        if (x.style.backgroundColor === "lightgray") {
+          x.style.backgroundColor = "white";
+        } else {
+          x.style.backgroundColor = "lightgray";
+        }
+	      //document.getElementById("pagamento-list-item17").style.backgroundColor = 'lightgray' ; 
+      }
+
+      function changebackground3(){
+        var x = document.getElementById("pagamento-list-item18");
+        if (x.style.backgroundColor === "lightgray") {
+          x.style.backgroundColor = "white";
+        } else {
+          x.style.backgroundColor = "lightgray";
+        }
+	      //document.getElementById("pagamento-list-item18").style.backgroundColor = 'lightgray' ; 
+      }
+        //document.getElementById("pagamento-list-item18").style.backgroundColor = 'lightgray' ; 
+      
 </script>
