--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -85,7 +85,7 @@
     localStorage['loggedIn'] = "false";
   }
 
-  if (localStorage.getItem('loggedIn') === "false") {
+  if (localStorage.getItem('loggedIn') !== "true") {
       document.location.href = "#/page1/page10";
   } else {
       document.location.href = "#/page1/page5";
