--- a/www/templates/criarConta.html
+++ b/www/templates/criarConta.html
@@ -38,12 +38,12 @@
   }
 
   function isValidPhone(phone) {
-    //var re = /9[1236][0-9]{7}|2[1-9][0-9]{7}/;
+    var re = /9[1236][0-9]{7}|2[1-9][0-9]{7}/;
     return re.test(phone);;
   }
 
   function isValidEmail(email) {
-    //var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+    var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
     return re.test(email);
   }
 
@@ -55,6 +55,7 @@
     var password = document.getElementById("password").value;
     var password2 = document.getElementById("password2").value;
 
+    /*
     if (!isValidName(fname)) {
       alert("Invalid first name!");
     } else if (!isValidName(lname)) {
@@ -66,14 +67,16 @@
     } else if (password != password2) {
       alert("Passwords do not match!");
     } else {
-      localStorage['fname'] = fname;
-      localStorage['lname'] = document.getElementById("lname").value;
-      localStorage['phone'] = document.getElementById("phone").value;
-      localStorage['email'] = document.getElementById("email").value;
-      localStorage['password'] = document.getElementById("password").value;
-      localStorage['defaultAirport'] = "";
-      alert("Registered successfully!");
-      document.location.href = "#/page1/page10";
-    }
+      */
+    localStorage['fname'] = fname;
+    localStorage['lname'] = document.getElementById("lname").value;
+    localStorage['phone'] = document.getElementById("phone").value;
+    localStorage['email'] = document.getElementById("email").value;
+    localStorage['password'] = document.getElementById("password").value;
+    localStorage['defaultAirport'] = "";
+    alert("Registered successfully!");
+    document.location.href = "#/page1/page10";
+    window.location.reload();
+    //}
   }
 </script>
