--- a/www/templates/pagamento.html
+++ b/www/templates/pagamento.html
@@ -1,28 +1,28 @@
 <ion-view id="page12">
   <ion-content padding="true" class="manual-ios-statusbar-padding">
-    <h4 id="pagamento-heading1" style="color:#000000;">Método de Pagamento</h4>
+    <h4 id="pagamento-heading1" style="color:#000000;">Payment Method</h4>
     <div class="list card" id="pagamento-card21">
       <ion-item class="item-avatar" id="pagamento-list-item10" onclick="changebackground();">
         <img src="img/lF3Zj4txRAy3iMwxT5DT_americanexpress-credit-debit-card-bank-transaction-32287.webp">
-        <h2>Joaquina Nogueira</h2>
+        <h2 id="card-name1"> Joaquim Madeira</h2>
         <p>6133 **** **** ****</p>
       </ion-item>
       <ion-item class="item-avatar" id="pagamento-list-item17" onclick="changebackground2();">
         <img src="img/asHFywhTym0Xzz1qAEAC_transferir1.png">
-        <h2>Joaquina Nogueira</h2>
+        <h2 id="card-name2">Joaquina Nogueira</h2>
         <p>9011 **** **** ****</p>
       </ion-item>
       <ion-item class="item-avatar" id="pagamento-list-item18" onclick="changebackground3();">
         <img src="img/I8lbAChRTOiz0pW7Etg7_mastercard-credit-debit-card-bank-transaction-32303.webp">
-        <h2>José Cid Nogueira</h2>
+        <h2 id="card-name3">José Cid Nogueira</h2>
         <p>4231 **** **** ****</p>
       </ion-item>
     </div>
     <div id="pagamento-button-bar1" class="button-bar"></div>
-    <h4 id="pagamento-heading2" style="color:#000000;">Adicionar método de pagamento</h4>
+    <h4 id="pagamento-heading2" style="color:#000000;">Add payment method</h4>
     <ion-list id="pagamento-list1">
       <ion-item class="item-icon-left item-icon-right" id="pagamento-list-item12">
-        <i class="icon ion-card"></i>Cartão
+        <i class="icon ion-card"></i>Card
         <i class="icon ion-ios-arrow-forward"></i>
       </ion-item>
       <ion-item class="item-icon-left item-icon-right" id="pagamento-list-item13">
@@ -30,15 +30,22 @@
         <i class="icon ion-ios-arrow-forward"></i>
       </ion-item>
     </ion-list>
-    <h4 id="pagamento-heading4" style="color:#000000;">Confirmar e Pagar</h4>
+    <h4 id="pagamento-heading4" style="color:#000000;">Confirm and Pay</h4>
     <button id="pagamento-button8" style="font-weight:500;border-radius:1px 1px 1px 1px;" class="button button-balanced button-block button-outline" onclick="buySucess();"></button>
     <button id="criarConta-button120" class="button button-stable button-block" onclick="visitPage();">Cancel</button>                                                                  
   </ion-content>
 </ion-view>
-<script> 
+<script>
       document.getElementById("pagamento-button8").innerHTML += 'Total '+localStorage.getItem('price');
+      document.getElementById("card-name1") = document.getElementById("fname") + document.getElementById("lname")
+      document.getElementById("card-name2") = document.getElementById("fname") + document.getElementById("lname")
+      document.getElementById("card-name3") = document.getElementById("fname") + document.getElementById("lname")
+
+      
+
       function visitPage(){
         window.location='index.html#/page6';
+        window.location.reload();
       }
 
       function buySucess(){
