search and explore done

--- a/www/templates/pagamento.html
+++ b/www/templates/pagamento.html
@@ -51,7 +51,8 @@
 
   function buySucess(){
     alert('Flight successfuly purchased! Enjoy the trip!');
-    window.location='index.html#/page1';
+    window.location='index.html#/page1/page3';
+    window.location.reload();
   }
 
   function addCard(){
