--- a/www/templates/searchAndExplore.html
+++ b/www/templates/searchAndExplore.html
@@ -8,30 +8,72 @@
     </form>
     <h5 id="searchAndExplore-heading1" style="color:#000000;">Recommended</h5>
     <ion-slides disable-side-menu-drag="" options="{'loop': true}" slider="slider1" delegate-handle="slider1" id="searchAndExplore-slider1" style="width:100%;height:150px;">
-      <ion-slide-page id="searchAndExplore-slide24" style="border-radius: 10%; background:url(&quot;img/tryout4.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
-      <ion-slide-page id="searchAndExplore-slide25" style="border-radius: 10%; background:url(&quot;img/tryout5.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
-      <ion-slide-page id="searchAndExplore-slide26" style="border-radius: 10%; background:url(&quot;img/tryout6.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide24" onclick="book('searchAndExplore-slide24')" style="border-radius: 10%; background:url(&quot;img/tryout4.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide25" onclick="book('searchAndExplore-slide25')" style="border-radius: 10%; background:url(&quot;img/tryout5.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide26" onclick="book('searchAndExplore-slide26')" style="border-radius: 10%; background:url(&quot;img/tryout6.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
     </ion-slides>
     <h5 id="searchAndExplore-heading3" style="color:#000000;">Popular</h5>
     <ion-slides disable-side-menu-drag="" options="{'loop': true}" slider="slider3" delegate-handle="slider3" id="searchAndExplore-slider3" style="width:100%;height:150px;">
-      <ion-slide-page id="searchAndExplore-slide216" style="border-radius: 10%; background:url(&quot;img/tryout8.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
-      <ion-slide-page id="searchAndExplore-slide217" style="border-radius: 10%; background:url(&quot;img/tryout9.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
-      <ion-slide-page id="searchAndExplore-slide218" style="border-radius: 10%; background:url(&quot;img/tryout6.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide27" onclick="book('searchAndExplore-slide27')" style="border-radius: 10%; background:url(&quot;img/tryout8.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide28" onclick="book('searchAndExplore-slide28')" style="border-radius: 10%; background:url(&quot;img/tryout9.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide29" onclick="book('searchAndExplore-slide29')" style="border-radius: 10%; background:url(&quot;img/tryout6.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
     </ion-slides>
     <h5 id="searchAndExplore-heading5" style="color:#000000;">Economic</h5>
     <ion-slides disable-side-menu-drag="" options="{'loop': true}" slider="slider4" delegate-handle="slider4" id="searchAndExplore-slider4" style="width:100%;height:150px;">
-      <ion-slide-page id="searchAndExplore-slide219" style="border-radius: 10%; background:url(&quot;img/tryout7.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
-      <ion-slide-page id="searchAndExplore-slide220" style="border-radius: 10%; background:url(&quot;img/tryout2.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
-      <ion-slide-page id="searchAndExplore-slide221" style="border-radius: 10%; background:url(&quot;img/tryout3.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide30" onclick="book('searchAndExplore-slide30')" style="border-radius: 10%; background:url(&quot;img/tryout7.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide31" onclick="book('searchAndExplore-slide31')" style="border-radius: 10%; background:url(&quot;img/tryout2.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide32" onclick="book('searchAndExplore-slide32')" style="border-radius: 10%; background:url(&quot;img/tryout3.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
     </ion-slides>
     <h5 id="searchAndExplore-heading6" style="color:#000000;">Close to you</h5>
     <ion-slides disable-side-menu-drag="" options="{'loop': true}" slider="slider6" delegate-handle="slider6" id="searchAndExplore-slider6" style="width:100%;height:150px;">
-      <ion-slide-page id="searchAndExplore-slide225" style="border-radius: 10%; background:url(&quot;img/tryout.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
-      <ion-slide-page id="searchAndExplore-slide226" style="border-radius: 10%; background:url(&quot;img/tryout1.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
-      <ion-slide-page id="searchAndExplore-slide227" style="border-radius: 10%; background:url(&quot;img/tryout10.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide33" onclick="book('searchAndExplore-slide33')" style="border-radius: 10%; background:url(&quot;img/tryout.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide34" onclick="book('searchAndExplore-slide34')" style="border-radius: 10%; background:url(&quot;img/tryout1.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
+      <ion-slide-page id="searchAndExplore-slide35" onclick="book('searchAndExplore-slide35')" style="border-radius: 10%; background:url(&quot;img/tryout10.png&quot;) no-repeat center;background-size:cover;"></ion-slide-page>
     </ion-slides>
   </ion-content>
 </ion-view>
 <script>
-  
+  function book(id) {
+    id = parseInt(id.slice(-2));
+    switch(id) {
+      case 24: 
+        localStorage["fillDestination"] = "Athens, Greece";
+        break;
+      case 25: 
+        localStorage["fillDestination"] = "Riviera, Italy";
+        break;
+      case 26: 
+        localStorage["fillDestination"] = "Luanu, Maldives";
+        break;
+      case 27: 
+        localStorage["fillDestination"] = "Rome, Italy";
+        break;
+      case 28: 
+        localStorage["fillDestination"] = "São Miguel, Azores";
+        break;
+      case 29: 
+        localStorage["fillDestination"] = "Luanu, Maldives";
+        break;
+      case 30: 
+        localStorage["fillDestination"] = "Milan, Italy";
+        break;
+      case 31: 
+        localStorage["fillDestination"] = "Wheel, Algeria";
+        break;
+      case 32: 
+        localStorage["fillDestination"] = "Warsow, Poland";
+        break;
+      case 33: 
+        localStorage["fillDestination"] = "Somme, France";
+        break;
+      case 34: 
+        localStorage["fillDestination"] = "Paris, France";
+        break;
+      case 35: 
+        localStorage["fillDestination"] = "Andorra, Spain";
+        break;
+    }
+    window.location='index.html#/page1';
+    window.location.reload();
+  }
 </script>
