can now remove from favorites

--- a/www/templates/alterarPalavraPasse.html
+++ b/www/templates/alterarPalavraPasse.html
@@ -13,9 +13,9 @@
         <input type="password" placeholder="Confirmar Palavra-Passe">
       </label>
     </form>
-    <button id="alterarPalavraPasse-button8" class="button button-positive button-block" style=" margin-top:0px; margin-right: 3px;" onclick="confirm2()">Alterar</button>
+    <button id="alterarPalavraPasse-button8" class="button button-positive button-block" style=" margin-top:0px; margin-right: 3px;" onclick="confirm2()">Change</button>
     <a ui-sref="tabsController.profile()" id="alterarPalavraPasse-button9" class="button button-stable button-block" style=" margin-top:0px; margin-left: 3px;border: 1px solid rgba(95, 93, 93, 0.111) " onclick="confirm()">Cancelar</a>
-    <p style="color:green; margin-bottom: 10px; display: none;" id="confirmation">Palavra-passe alterada com sucesso</p>
+    <p style="color:green; margin-bottom: 10px; display: none;" id="confirmation">Successfully changed password!</p>
   </ion-content>
 </ion-view>
 <script>
