--- a/www/templates/book.html
+++ b/www/templates/book.html
@@ -24,7 +24,10 @@
 <ion-view id="page2">
   <ion-content padding="true" class="has-header">
     <div>
-      <img src="img/yj9JyJxcQlarMVPg5udZ_logo.png" style="display: block; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
+      <img src="img/logog.png" style="display: block; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
+    </div>
+    <p> </p>
+    <div>    
     </div>
     <form id="book-form5" class="list">
       <label class="item item-input" id="book-select0" name="book-from">
