updated images favorites.html

--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -58,14 +58,14 @@
         <button id="buy-button" onclick="visitPage('Lisbon, Portugal', 'Madrid, Spain');">Buy</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="favorites-list-item11">
-        <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
+        <img id="thumbnail" src="img/rYpuYQEIR5qrE3rUzvei_azores.jpg">
         <i id="icon" class="ion-ios-heart" onclick="confirmation('favorites-list-item11')"></i>
         <h3>From: Lisbon, Portugal</h3>
         <h3>To: Lisse, Holland</h3>
         <button id="buy-button" onclick="visitPage('Lisbon, Portugal', 'Lisse, Holland');">Buy</button>
       </ion-item>
       <ion-item class="item-thumbnail-left" id="favorites-list-item12">
-        <img id="thumbnail" src="img/HutWGo5IRCupJxmDu4dv_madeira.jpeg">
+        <img id="thumbnail" src="img/Q6b91FYQYepfqNXu0kvX_italy.jpg">
         <i id="icon" class="ion-ios-heart" onclick="confirmation('favorites-list-item12')"></i>
         <h3>From: Lisbon, Portugal</h3>
         <h3>To: Rome, Italy</h3>
