--- a/www/templates/book.html
+++ b/www/templates/book.html
@@ -74,8 +74,8 @@
 </ion-view>
 
 <script>
-    document.getElementById("input-from").value = localStorage.getItem("fillDestination");
-    document.getElementById("input-to").value = localStorage.getItem("fillDestination2");
+    document.getElementById("input-to").value = localStorage.getItem("fillDestination");
+    document.getElementById("input-from").value = localStorage.getItem("fillDestination2");
     localStorage.removeItem("fillDestination");
     localStorage.removeItem("fillDestination2");
     var roundtrip = false;
